# xiangye1

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-collect-v4.yml
knowledge/articles/: 2026-06-15-github-agent-reach.json  2026-06-15-github-agent-skills.json  2026-06-15-github-headroom.json  2026-06-15-github-last30days-skill.json  2026-06-15-github-openai-plugins.json  2026-06-15-github-skillspector.json  2026-06-15-github-supervision.json  2026-06-15-github-system-prompts-and-models-of-ai-tools.json  2026-06-15-github-system-prompts-leaks.json  2026-06-15-github-taste-skill.json  2026-06-16-github-browser-use.json  2026-06-16-github-cherry-studio.json  2026-06-16-github-cowagent.json  2026-06-16-github-deer-flow.json  2026-06-16-github-dify.json  2026-06-16-github-goose.json  2026-06-16-github-hermes-agent.json  2026-06-16-github-jeecgboot.json  2026-06-16-github-langchain.json  2026-06-16-github-llamafactory.json  2026-06-16-github-mem0.json  2026-06-16-github-metagpt.json  2026-06-16-github-openhands.json  2026-06-16-github-pi.json  2026-06-16-github-ragflow.json  2026-06-17-github_trending-ai-engineering-hub.json  2026-06-17-github_trending-aichat.json  2026-06-17-github_trending-astrbot.json  2026-06-17-github_trending-awesome-llm-resources.json  2026-06-17-github_trending-bisheng.json  2026-06-17-github_trending-cherry-studio.json  2026-06-17-github_trending-codefather.json  2026-06-17-github_trending-finrobot.json  (+242 more)
v4-production/: .env.example  .gitignore  AGENTS.md  README.md  requirements.txt
(+486 files in other folders)
